# conjoint-analysis

./: AI_ANALYST.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PRIVACY.md  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt  run_app.bat  run_app.command
docs/: data_guide.md  methods.md
examples/: concept_template.csv  demo_car_ratings.csv  demo_coffee_ratings.csv  demo_concept_test.csv  demo_streaming_ratings.csv  ratings_template.csv
scripts/: generate_examples.py
src/choicesignal/: __init__.py  concept_test.py  conjoint.py  io.py
tests/: test_app_pages.py  test_concept_test.py  test_conjoint.py  test_io_and_exports.py
